--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "circular-json-es6": "^2.0.2",
     "crypto-js": "^3.1.9-1",
     "express": "^4.16.3",
     "morgan": "^1.9.0",
+    "util": "^0.10.3",
     "ws": "^5.1.1"
   },
   "scripts": {
