--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "circular-json-es6": "^2.0.2",
     "crypto-js": "^3.1.9-1",
     "express": "^4.16.3",
+    "hex-to-binary": "^1.0.1",
     "morgan": "^1.9.0",
     "util": "^0.10.3",
     "ws": "^5.1.1"
