--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.18.2",
     "circular-json-es6": "^2.0.2",
     "crypto-js": "^3.1.9-1",
+    "elliptic": "^6.4.0",
     "express": "^4.16.3",
     "hex-to-binary": "^1.0.1",
     "morgan": "^1.9.0",
